Ajustes en Validación de Productos y estilos

--- a/productos.html
+++ b/productos.html
@@ -256,6 +256,7 @@
         </div>
     </div>
 
+    <script src="./JavaScript/funciones.js"></script>
     <script src="./JavaScript/productos.js"></script>
 </body>
 </html>
