Ajuste y Agregado de Contacto y Servicios

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <nav id="navMenu">
             <a class="clsAMenuPrincipal" href="index.html">Inicio</a>
             <a class="clsAMenuPrincipal" href="productos.html">Productos</a>
-            <a class="clsAMenuPrincipal" href="#">Servicios</a>
-            <a class="clsAMenuPrincipal" href="#">Contacto</a>    
+            <a class="clsAMenuPrincipal" href="servicios.html">Servicios</a>
+            <a class="clsAMenuPrincipal" href="contacto.html">Contacto</a>    
         </nav>
     </div>
     <section id="stnPrincipal">    
@@ -54,9 +54,8 @@
     </section>
     <footer id="ftrPagina">
         <div id="divDireccion">
-            <p>La Ocuridad 25 - CABA </p>
-            <p>Teléfono de contacto: 11 5555-5656</p>
-            <p>Correo electrónico: Consultas@Morfemos.com</p>
+            <p>Comisión: 24173 - Grupo: A1</p>
+            <p>Integrantes:  Poratti Jorge - Carrasco Alejandro - Paglione Victoria</p>
         </div>
         <div id="divMensaje">
             <p id="pAviso"></p> 
