Ajustes de llamados a CSS

--- a/contacto.html
+++ b/contacto.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./Imagenes/Favicon.jpg" type="jpg">  
     <title>Morfemos</title>
-    <link rel="stylesheet" href="/CSS/Style_Estandar.css">
-    <link rel="stylesheet" href="/CSS/Style_Contact.css">
+    <link rel="stylesheet" href="./CSS/Style_Estandar.css">
+    <link rel="stylesheet" href="./CSS/Style_Contacto.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
