--- a/servicios.html
+++ b/servicios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Morfemos.com</title>
     <link rel="stylesheet" href="./CSS/Style_Estandar.css">
-    <link rel="stylesheet" href="/CSS/Style_Servicios.css">
+    <link rel="stylesheet" href="./CSS/Style_Servicios.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth">
