--- a/productos.html
+++ b/productos.html
@@ -6,12 +6,8 @@
     <title>Morfemos.com</title>
     <link rel="stylesheet" href="./CSS/Style_Estandar.css">
     <link rel="stylesheet" href="./CSS/Style_Productos.css">
-
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Tangerine">
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Merienda">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merienda">
     <link rel="icon" href="./Imagenes/Favicon.jpg" type="jpg">          
     <title>Document</title>
 </head>
