Defini click en Fotos HD

--- a/servicios.html
+++ b/servicios.html
@@ -37,15 +37,8 @@
                 <p id = "pDescFoto"></p>
               </div>
               <div id="divFotos">
-                <img id="imgFoto" src="./Imagenes/Cenas.jpg" alt="Cenas">
+                <img id="imgFoto" src="" alt="Cenas">
               </div>
-
-
-
-                <!-- <h3 >Ejemplos de Servicios</h3>
-                <p>Las fotos son algunas muestras de nuestros servicios realizados</p>
-                <h5>Ingredientes de estacion, sanos y naturales</h5>
-                <p>Se usan solo los mejores productos para todos nuestros platos, verduras y frutas de estacion, cocinadas por nuestros chefs con la mayor dedicacion</p> -->
             </div>
         </aside>
     </section>
