--- a/servicios.html
+++ b/servicios.html
@@ -33,8 +33,10 @@
         <aside id="asdPrincipal">
             <div id="divPrincipal">
               <div id="divTextos">
-                <h1 id = "hTituloFoto"></h1>
-                <p id = "pDescFoto"></p>
+                <h1 class="clsTituloFoto">Ingredientes de estacion, sanos y naturales</h1>
+                <p class="clsDescFoto">Se usan solo los mejores productos para todos nuestros platos, verduras y frutas de estacion, cocinadas por nuestros chefs con la mayor dedicacion</p>
+                <h1 id = "hTituloFoto" class="clsTituloFoto"></h1>
+                <p id = "pDescFoto" class="clsDescFoto"></p>
               </div>
               <div id="divFotos">
                 <img id="imgFoto" src="" alt="Cenas">
