--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
-    <link rel="icon" href="./Imagenes/Favicon.jpg" type="jpg">          
-    <title>Document</title>
+    <link rel="icon" href="./Imagenes/Favicon.jpg" type="image/jpeg">          
 </head>
 <body>
     <header id="hdrHeader">
