--- a/productos.html
+++ b/productos.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./CSS/Style_Productos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merienda">
-    <link rel="icon" href="./Imagenes/Favicon.jpg" type="jpg">          
-    <title>Document</title>
+    <link rel="icon" href="./Imagenes/Favicon.jpg" type="image/jpeg">          
 </head>
 <body>
     <!--Inicio Pantalla Principal---------------->
