Versión Sushi Jel

--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morfemos.com</title>
+    <title>Sushi Jel</title>
     <link rel="stylesheet" href="./CSS/Style_Estandar.css">
     <link rel="stylesheet" href="./CSS/Style_Index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
-    <link rel="icon" href="./Imagenes/Favicon.jpg" type="image/jpeg">          
+    <link rel="icon" href="./Imagenes/favicon.png" type="image/jpeg">          
 </head>
 <body>
     <header id="hdrHeader">
         <div id="divHeader">
-            <h1 id="h1Empresa">Morfemos.com</h1>
+            <h1 id="h1Empresa">Sushi Jel</h1>
             <br>
-            <h4 id="h4Descripcion">Alta cocina desde la comodidad de tu casa!!!</h4>
+            <h4 id="h4Descripcion">Reservations & Deliveries</h4>
         </div>
-        <img id="imgLogo" src="./Imagenes/Logo.jpg" alt="Logotipo de tu Empresa">
+        <img id="imgLogo" src="./Imagenes/Logo.png" alt="Logotipo de tu Empresa">
     </header>
     <div id="divMenu">
         <nav id="navMenu">
@@ -31,28 +30,30 @@
     <section id="stnPrincipal">    
         <aside id="asdPrincipal">
             <div class="clsDiv">
-                <h2 id="h2Descripcion">Si te gusta la comida tradicional con un toque de sofisticación, somos la elección correcta.<br>
-                    Estamos en Parque Chacabuco, atras de las escuelas.<br><br>
+                <h2 id="h2Descripcion">Si te gusta la comida Japonesa con un toque de sofisticación, somos la elección correcta.<br>
+                    Estamos en Av Caceros 2100.<br><br>
                 </h2>
                 <h2 id="h2Pedidos" class="clsOpcionPedido">
-                    Podes hacer tu pedido via:<br>
+                    Reservas al: +54 911 5555 5656<br><br>
+                </h2>
+                <h2 id="h2Pedidos" class="clsOpcionPedido">
+                    Pedidos:<br>
                 </h2>
                 <ul id="ulOpcionesPedidod" class="clsOpcionPedido">
-                    <li>La Web (<a href="Productos.html">Productos</a>)</li>
-                    <li>Llamando al 011-5555-5656</li>
-                    <li>Personalmente</li>
+                    <li>Via Web (<a href="Productos.html">Productos</a>)</li>
+                    <li>Al: +54 911 5555 5656</li>
                 </ul>
-                <h2 id="h2Retiro" class="clsOpcionPedido">Te lo alcanzamos o lo podes retirar</h2>
+                <h2 id="h2Retiro" class="clsOpcionPedido">Lo preparamos, te avisamos, y lo retiras cuando gustes.</h2>
             </div>
             <div class="clsDiv">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2443.581779440353!2d-58.44156507617182!3d-34.63470220691448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sLa%20Oscuridad%2C%20caba!5e0!3m2!1ses-419!2sar!4v1713132464348!5m2!1ses-419!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1235.5947125440216!2d-58.392251791233804!3d-34.6344358904466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb3dcd0b9941%3A0xe7a602ba696f538!2sAv.%20Caseros%202100%2C%20C1282%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1726416290078!5m2!1ses-419!2sar" width="720" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </aside>
     </section>
     <footer id="ftrPagina">
         <div id="divDireccion">
-            <p>Comisión: 24173 - Grupo: A1</p>
-            <p>Integrantes:  Poratti Jorge - Carrasco Alejandro - Paglione Victoria</p>
+            <p>Comisión: Lunes 15hs</p>
+            <p>Integrantes:  Jorge Luis Poratti - Jerónimo Esteban Alfonso - María del Luján Olaza</p>
         </div>
         <div id="divMensaje">
             <p id="pAviso"></p> 
