--- a/contacto.html
+++ b/contacto.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./Imagenes/Favicon.jpg" type="jpg">  
-    <title>Morfemos</title>
+    <title>Sushi Jel</title>
     <link rel="stylesheet" href="./CSS/Style_Estandar.css">
     <link rel="stylesheet" href="./CSS/Style_Contacto.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amaranth">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="icon" href="./Imagenes/Favicon.jpg" type="image/jpeg">    
+    <link rel="icon" href="./Imagenes/favicon.png" type="image/jpeg">    
 </head>
 <body>
     <header id="hdrHeader">
         <div id="divHeader">
-            <h1 id="h1Empresa">Morfemos.com</h1>
+            <h1 id="h1Empresa">Sushi Jel</h1>
             <br>
-            <h4 id="h4Descripcion">Alta cocina desde la comodidad de tu casa!!!</h4>
+            <h4 id="h4Descripcion">Reservations & Deliveries</h4>
         </div>
-        <img id="imgLogo" src="./Imagenes/Logo.jpg" alt="Logotipo de tu Empresa">
+        <img id="imgLogo" src="./Imagenes/Logo.png" alt="Logotipo de tu Empresa">
     </header>
     <div id="divMenu">
         <nav id="navMenu">
@@ -62,8 +63,8 @@
 
     <footer id="ftrPagina">
         <div id="divDireccion">
-            <p>Comisión: 24173 - Grupo: A1</p>
-            <p>Integrantes:  Poratti Jorge - Carrasco Alejandro - Paglione Victoria</p>
+            <p>Comisión: Lunes 15hs</p>
+            <p>Integrantes:  Jorge Luis Poratti - Jerónimo Esteban Alfonso - María del Luján Olaza</p>
         </div>
         <div id="divMensaje">
             <p id="pAviso"></p> 
